// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders a dateTime input 1`] = `
<div>
  <label />
  <input
    type="datetime-local"
  />
</div>
`;

exports[`Input renders a submit input 1`] = `
<div>
  <label />
  <input
    type="submit"
  />
</div>
`;

exports[`Input renders a text input 1`] = `
<div>
  <label />
  <input
    type="text"
  />
</div>
`;
